--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -8,12 +8,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v2
-  # 'actions/checkout@v2' is a pre-made action that checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
+  strategy:
+      matrix:
+        node-version: [14.x,16.x]
 
-    - name: Install dependencies
-  run: npm install
+      steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: npm install
   # 'npm install' installs the dependencies defined in your project's 'package.json' file.
 
   steps:
