--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -1,22 +1,32 @@
-name: Example Workflow
+# .github/workflows/node.js.yml
+
+# Name of the workflow
+name: Node.js CI
+
+# Specifies when the workflow should be triggered
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
+# Defines the jobs that the workflow will execute
 jobs:
   build:
     runs-on: ubuntu-latest
-  strategy:
+
+    strategy:
       matrix:
         node-version: [14.x,16.x]
 
-      steps:
+    steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
       - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
