--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x,16.x]
+        node-version: [20.x]
 
     steps:
       - name: Checkout repository
@@ -27,19 +27,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
+
       - name: Install dependencies
-        run: npm install
-  # 'npm install' installs the dependencies defined in your project's 'package.json' file.
+        run: npm ci
 
-  steps:
-    - name: Build
-  run: npm run build
-  # 'npm run build' runs the build script defined in your 'package.json'. This is typically used for compiling or preparing your code for deployment.
-steps:
-- name: Run tests
-  run: npm test
-  # 'npm test' runs the test script defined in your 'package.json'. It's crucial for ensuring that your code works as expected before deployment.
+      - name: Build (if script is present)
+        run: npm run build --if-present
 
+      - name: Run tests
+        run: npm test
