--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,38 @@
-name: Example Workflow
+# .github/workflows/node.js.yml
+
+# Name of the workflow
+name: Node.js CI
+
+# Specifies when the workflow should be triggered
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
+# Defines the jobs that the workflow will execute
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.x]
+
     steps:
-    # Steps will be defined next
-steps:
-- uses: actions/checkout@v2
-  # 'actions/checkout@v2' is a pre-made action that checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-- name: Install dependencies
-  run: npm install
-  # 'npm install' installs the dependencies defined in your project's 'package.json' file.
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 
-- name: Build
-  run: npm run build
-  # 'npm run build' runs the build script defined in your 'package.json'. This is typically used for compiling or preparing your code for deployment.
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build (if script is present)
+        run: npm run build --if-present
+
+      - name: Run tests
+        run: npm test
