--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,10 @@ jobs:
     # Steps will be defined next
 steps:
 - uses: actions/checkout@v2
+- uses: actions/setup-node@v2
   # 'actions/checkout@v2' is a pre-made action that checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
+  with:
+          node-version: [20.x]
 
 - name: Install dependencies
   run: npm install
