--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+# .github/workflows/node.js.yml
+# Name of the workflow
 name: Example Workflow
 on:
   push:
@@ -8,14 +10,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  
+    strategy:
+      matrix:
+        node-version: [14.x,16.x]
     # Steps will be defined next
 steps:
 - uses: actions/checkout@v2
 - uses: actions/setup-node@v2
   # 'actions/checkout@v2' is a pre-made action that checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
   with:
-          node-version: [20.x]
+          node-version: ${{ matrix.node-version }}
 
 - name: Install dependencies
   run: npm install
