--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,38 @@
 # .github/workflows/node.js.yml
+
 # Name of the workflow
 name: Node.js CI
+
+# Specifies when the workflow should be triggered
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-    
+
+# Defines the jobs that the workflow will execute
 jobs:
   build:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         node-version: [14.x,16.x]
-    # Steps will be defined next
-steps:
-- uses: actions/checkout@v2
-- uses: actions/setup-node@v2
-  # 'actions/checkout@v2' is a pre-made action that checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it.
-  with:
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
           node-version: ${{ matrix.node-version }}
 
-- name: Install dependencies
-  run: npm ci
-  # 'npm install' installs the dependencies defined in your project's 'package.json' file.
+      - name: Install dependencies
+        run: npm ci
 
-- name: Build (if script is present)
-run: npm run build --if-present
+      - name: Build (if script is present)
+        run: npm run build --if-present
 
+      - name: Run tests
+        run: npm test
