--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,22 @@
-# .github/workflows/node.js.yml
+name: example workflow
 
-# Name of the workflow
-name: Node.js CI
-
-# Specifies when the workflow should be triggered
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-# Defines the jobs that the workflow will execute
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [14.x,16.x]
+        node-version: [14.x, 16.x]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
 
