--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,23 @@
-name: example workflow
+name: Example Workflow
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x]
 
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
+        # 'actions/checkout@v2' checks out your repository so the workflow can access it.
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+        # Installs dependencies listed in 'package.json'.
 
-      - name: Build (if script is present)
-        run: npm run build --if-present
+      - name: Build
+        run: npm run build
+        # Runs the build script, typically to compile or bundle code.
 
       - name: Run tests
         run: npm test
+        # Executes your test suite to ensure code c
