--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "github-action-ci-cd",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 2"
-  },
+ "scripts": {
+  "start": "node index.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
