--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,50 @@
-name: build
+name: Node.js CI
 
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+env:
+  GLOBAL_ENV_VAR: "Production"
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v2
-        # 'actions/checkout@v2' checks out your repository so the workflow can access it.
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm install
-        # Installs dependencies listed in 'package.json'.
-
-      - name: Build
-        run: npm start build
-        # Runs the build script, typically to compile or bundle code.
 
       - name: Run tests
         run: npm test
-        # Executes your test suite to ensure code c
+
+      - name: Build project
+        run: npm run build
+
+      - name: Print environment variable
+        run: echo "Env: $GLOBAL_ENV_VAR"
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Deploy with token
+        run: echo "Deploying with token: ${{ secrets.DEPLOY_TOKEN }}"
