--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run build
 
       - name: Print environment variable
-        run: echo "Env: $GLOBAL_ENV_VAR"
+        run: echo "Env $GLOBAL_ENV_VAR"
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,4 +47,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy with token
-        run: echo "Deploying with token: ${{ secrets.DEPLOY_TOKEN }}"
+        run: echo "Deploying with token ${{ secrets.DEPLOY_TOKEN }}"
